# nrf5340-app-hal-example

./: Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config.toml
src/: main.rs
