[package]
name = "stm32-hal2-demo"
authors = ["David Haig"]
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
cortex-m-rtic = { version = "0.5.9", features = ["cortex-m-7"], default-features = false }
#nrf5340-app-hal = { version = "0.15.0", features = ["rt"] }
stm32-hal2 = { version = "1.4.2", features = ["l552", "l5rt"] }

defmt = "0.3.0"
defmt-rtt = "0.3.1"
panic-halt = "0.2.0"